<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        >

    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/collapsing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        android:fitsSystemWindows="true"
        app:contentScrim="?attr/colorPrimary"
        app:expandedTitleMarginStart="48dp"
        app:expandedTitleMarginEnd="64dp"
        >

    <ImageView
        android:contentDescription="@string/poster_image_desc"
        android:id="@+id/main.backdrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:fitsSystemWindows="true"
        android:src="@drawable/image2"
        app:layout_collapseMode="parallax"
        />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_collapseMode="pin"
            />
    </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:background="@color/viewBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical">


            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="50"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:contentDescription="@string/star_image_desc"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/star"/>

                    <TextView
                        android:id="@+id/ratings"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="5.6"
                        android:textSize="20sp"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="50"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:contentDescription="@string/play_trailer_desc"
                        android:id="@+id/image_play_trailer"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/play"/>

                    <TextView
                        android:id="@+id/text_play_trailer"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/play_trailer"
                        android:textSize="20sp"/>

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:background="#CD853F"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/Overview"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Autobots and Decepticons are at war, with humans on the sidelines. Optimus Prime is gone. The key to saving our future lies buried in the secrets of the past, in the hidden history of Transformers on Earth."/>
            </LinearLayout>

            <TextView
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/top_billed_cast"
                android:textSize="20sp"/>


            <android.support.v7.widget.RecyclerView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:clipToPadding="false"
                android:id="@+id/recycler_view"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:background="#CD853F"
                android:padding="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/facts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/facts"
                    android:textSize="24sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/status"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Released"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/release_date"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2017-6-5"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genres"
                    android:textSize="20sp"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:background="#CD853F"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/genre1"
                            android:background="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Adventure"
                            android:textSize="16sp"/>
                        <TextView
                            android:id="@+id/genre2"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:background="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Adventure"
                            android:textSize="16sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/genre3"
                            android:background="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Adventure"
                            android:textSize="16sp"/>
                        <TextView
                            android:id="@+id/genre4"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:background="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Adventure"
                            android:textSize="16sp"/>

                    </LinearLayout>

                </LinearLayout>



                <TextView
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/budget"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/budget"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$200,000,000"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/revenue"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/revenue"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$200,000,000"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/runtime"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/runtime"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2h 29min"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/homepage"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/homepage"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="http://www.transformersmovie.com/"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>