<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android" >

        <LinearLayout
            android:padding="10dp"
            android:background="#504141"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/season_num"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/season_videos"
                    android:clickable="true"
                    android:textColor="@color/white"
                    android:text="@string/videos"
                    android:gravity="end|center"
                    android:layout_gravity="end|center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>
            <TextView
                android:id="@+id/season_overview"
                android:layout_marginTop="3dp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>

        <TextView
            android:padding="10dp"
            android:id="@+id/regular_cast"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regular_cast" />


        <android.support.v7.widget.RecyclerView
            android:padding="10dp"
            android:background="@color/viewBg"
            android:layout_width="match_parent"
            android:clipToPadding="false"
            android:id="@+id/recycler_view_season_view"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/episodes"/>

            <TextView
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/episode_total"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_margin="5dp"
            android:id="@+id/recycler_view_episodes_view"
            android:background="@color/viewBg"
            android:layout_width="match_parent"
            android:clipToPadding="false"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp">
        </View>


    </LinearLayout>
</ScrollView>